@@ -10,7 +10,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CourtList;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.CourtListWrapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.document.FrcCourtDetails;
 
-
 import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -18,7 +17,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.BiPredicate;
 
-import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseDataService.nullToEmpty;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseHearingFunctions.getCourtDetailsString;
 
@@ -30,6 +28,7 @@ public class CourtDetailsMapper {
 
     private final ObjectMapper objectMapper;
 
+    @SuppressWarnings("java:S3011")
     final BiPredicate<Field, CourtListWrapper> fieldIsNotNullOrEmpty = (field, courtListWrapper) -> {
         try {
             field.setAccessible(true);
@@ -62,9 +61,10 @@ public class CourtDetailsMapper {
     private List<Field> filterEmptyFields(List<Field> allFields, CourtListWrapper courtListWrapper) {
         return allFields.stream()
             .filter(field -> fieldIsNotNullOrEmpty.test(field, courtListWrapper))
-            .collect(toList());
+            .toList();
     }
 
+    @SuppressWarnings("java:S112")
     private FrcCourtDetails convertToFrcCourtDetails(Field initialisedCourtField,
                                                      CourtListWrapper courtListWrapper) throws Exception {
         Map<String, Object> courtDetailsMap = objectMapper.readValue(getCourtDetailsString(),
