@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.service.correspondence.hearing;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -13,21 +12,18 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.service.BulkPrintService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.NotificationService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j
 public class FinremApprovedOrderNoticeOfHearingCorresponder extends FinremHearingCorresponder {
 
-    private final ObjectMapper objectMapper;
     private final DocumentHelper documentHelper;
 
     @Autowired
     public FinremApprovedOrderNoticeOfHearingCorresponder(BulkPrintService bulkPrintService,
                                                           NotificationService notificationService,
-                                                          ObjectMapper objectMapper, DocumentHelper documentHelper) {
+                                                          DocumentHelper documentHelper) {
         super(bulkPrintService, notificationService);
-        this.objectMapper = objectMapper;
         this.documentHelper = documentHelper;
     }
 
@@ -35,8 +31,7 @@ public class FinremApprovedOrderNoticeOfHearingCorresponder extends FinremHearin
     public List<BulkPrintDocument> getDocumentsToPrint(FinremCaseDetails caseDetails) {
         List<CaseDocument> hearingNoticePack = caseDetails.getData().getHearingNoticeDocumentPack().stream()
             .map(DocumentCollection::getValue)
-            .collect(Collectors.toList());
-        List<BulkPrintDocument> documentsToPrint = documentHelper.getCaseDocumentsAsBulkPrintDocuments(hearingNoticePack);
-        return documentsToPrint;
+            .toList();
+        return documentHelper.getCaseDocumentsAsBulkPrintDocuments(hearingNoticePack);
     }
 }
