@@ -2,13 +2,13 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.service.barristers;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.error.NoSuchUserException;
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.BarristerUpdateDifferenceCalculator;
@@ -43,9 +43,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APPLICANT;
@@ -73,8 +71,8 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESP_SOLICITOR_POLICY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.service.CcdServiceTest.AUTH_TOKEN;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ManageBarristerServiceTest {
+@ExtendWith(MockitoExtension.class)
+class ManageBarristerServiceTest {
 
     private static final long CASE_ID = 1583841721773828L;
     private static final String APP_BARRISTER_EMAIL_ONE = "applicantbarristerone@gmail.com";
@@ -85,7 +83,7 @@ public class ManageBarristerServiceTest {
     private static final String SYS_USER_TOKEN = "sysUserToken";
     private static final String CLIENT_NAME = "Client Name";
     private static final String SOME_ORG_ID = "someOrgId";
-    public static final String CASEWORKER_POLICY = "[CASEWORKER]";
+    static final String CASEWORKER_POLICY = "[CASEWORKER]";
     private static final Barrister DEFAULT_BARRISTER = Barrister.builder()
         .email("someEmail")
         .build();
@@ -116,18 +114,18 @@ public class ManageBarristerServiceTest {
 
     private CaseDetails caseDetails;
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp() throws Exception {
         Map<String, Object> caseData = new HashMap<>();
         caseDetails = CaseDetails.builder().id(CASE_ID).data(caseData).build();
     }
 
     @Test
-    public void givenValidData_whenGetBarristersForPartyApplicant_thenReturnApplicantBarristerData() {
+    void givenValidData_whenGetBarristersForPartyApplicant_thenReturnApplicantBarristerData() {
         List<BarristerData> applicantBarristers = applicantBarristerCollection();
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         caseDetails.getData().put(APPLICANT_BARRISTER_COLLECTION, applicantBarristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -136,11 +134,11 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenGetBarristersForPartyIntervener1_thenReturnIntervener1BarristerData() {
+    void givenValidData_whenGetBarristersForPartyIntervener1_thenReturnIntervener1BarristerData() {
         List<BarristerData> intervener1Barristers = intervener1BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_1_POLICY);
         caseDetails.getData().put(INTERVENER_BARRISTER_1_COLLECTION, intervener1Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_1_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -149,11 +147,11 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenGetBarristersForPartyIntervener2_thenReturnIntervener2BarristerData() {
+    void givenValidData_whenGetBarristersForPartyIntervener2_thenReturnIntervener2BarristerData() {
         List<BarristerData> intervener2Barristers = intervener2BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_2_POLICY);
         caseDetails.getData().put(INTERVENER_BARRISTER_2_COLLECTION, intervener2Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_2_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -162,11 +160,11 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenGetBarristersForPartyIntervener3_thenReturnIntervener3BarristerData() {
+    void givenValidData_whenGetBarristersForPartyIntervener3_thenReturnIntervener3BarristerData() {
         List<BarristerData> intervener3Barristers = intervener3BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_3_POLICY);
         caseDetails.getData().put(INTERVENER_BARRISTER_3_COLLECTION, intervener3Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_3_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -175,11 +173,11 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenGetBarristersForPartyIntervener4_thenReturnIntervener4BarristerData() {
+    void givenValidData_whenGetBarristersForPartyIntervener4_thenReturnIntervener4BarristerData() {
         List<BarristerData> intervener4Barristers = intervener4BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_4_POLICY);
         caseDetails.getData().put(INTERVENER_BARRISTER_4_COLLECTION, intervener4Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_4_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -189,10 +187,10 @@ public class ManageBarristerServiceTest {
 
 
     @Test
-    public void givenNoCurrentBarristers_whenGetBarristersForPartyApplicant_thenReturnEmptyList() {
+    void givenNoCurrentBarristers_whenGetBarristersForPartyApplicant_thenReturnEmptyList() {
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         caseDetails.getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristerCollection());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -201,10 +199,10 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener1_thenReturnEmptyList() {
+    void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener1_thenReturnEmptyList() {
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_1_POLICY);
         caseDetails.getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristerCollection());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_1_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -213,10 +211,10 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener2_thenReturnEmptyList() {
+    void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener2_thenReturnEmptyList() {
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_2_POLICY);
         caseDetails.getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristerCollection());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_2_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -225,10 +223,10 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener3_thenReturnEmptyList() {
+    void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener3_thenReturnEmptyList() {
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_3_POLICY);
         caseDetails.getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristerCollection());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_3_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -237,10 +235,10 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener4_thenReturnEmptyList() {
+    void givenNoCurrentBarristers_whenGetBarristersForPartyIntervener4_thenReturnEmptyList() {
         caseDetails.getData().put(CASE_ROLE, INTVR_SOLICITOR_4_POLICY);
         caseDetails.getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristerCollection());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(INTVR_SOLICITOR_4_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -249,11 +247,11 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenGetBarristersForPartyRespondent_thenReturnRespondentBarristerData() {
+    void givenValidData_whenGetBarristersForPartyRespondent_thenReturnRespondentBarristerData() {
         List<BarristerData> respondentBarristers = respondentBarristerCollection();
         caseDetails.getData().put(CASE_ROLE, RESP_SOLICITOR_POLICY);
         caseDetails.getData().put(RESPONDENT_BARRISTER_COLLECTION, respondentBarristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(RESP_SOLICITOR_POLICY));
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -262,12 +260,12 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenCaseworkerUsers_whenGetBarristersForPartyApplicant_thenReturnApplicantBarristerData() {
+    void givenCaseworkerUsers_whenGetBarristersForPartyApplicant_thenReturnApplicantBarristerData() {
         List<BarristerData> applicantBarristers = applicantBarristerCollection();
         caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
         caseDetails.getData().put(MANAGE_BARRISTER_PARTY, APPLICANT);
         caseDetails.getData().put(APPLICANT_BARRISTER_COLLECTION, applicantBarristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(CaseAssignedUserRolesResource.builder().build());
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -276,12 +274,12 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenCaseworkerUsers_whenGetBarristersForPartyIntervener1_thenReturnIntervener1BarristerData() {
+    void givenCaseworkerUsers_whenGetBarristersForPartyIntervener1_thenReturnIntervener1BarristerData() {
         List<BarristerData> intervener1Barristers = intervener1BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
         caseDetails.getData().put(MANAGE_BARRISTER_PARTY, INTERVENER1);
         caseDetails.getData().put(INTERVENER_BARRISTER_1_COLLECTION, intervener1Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(CaseAssignedUserRolesResource.builder().build());
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -290,12 +288,12 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenCaseworkerUsers_whenGetBarristersForPartyIntervener2_thenReturnIntervener2BarristerData() {
+    void givenCaseworkerUsers_whenGetBarristersForPartyIntervener2_thenReturnIntervener2BarristerData() {
         List<BarristerData> intervener2Barristers = intervener2BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
         caseDetails.getData().put(MANAGE_BARRISTER_PARTY, INTERVENER2);
         caseDetails.getData().put(INTERVENER_BARRISTER_2_COLLECTION, intervener2Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(CaseAssignedUserRolesResource.builder().build());
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -304,12 +302,12 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenCaseworkerUsers_whenGetBarristersForPartyIntervener3_thenReturnIntervener3BarristerData() {
+    void givenCaseworkerUsers_whenGetBarristersForPartyIntervener3_thenReturnIntervener3BarristerData() {
         List<BarristerData> intervener3Barristers = intervener3BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
         caseDetails.getData().put(MANAGE_BARRISTER_PARTY, INTERVENER3);
         caseDetails.getData().put(INTERVENER_BARRISTER_3_COLLECTION, intervener3Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(CaseAssignedUserRolesResource.builder().build());
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -318,12 +316,12 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenCaseworkerUsers_whenGetBarristersForPartyIntervener4_thenReturnIntervener4BarristerData() {
+    void givenCaseworkerUsers_whenGetBarristersForPartyIntervener4_thenReturnIntervener4BarristerData() {
         List<BarristerData> intervener4Barristers = intervener4BarristerCollection();
         caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
         caseDetails.getData().put(MANAGE_BARRISTER_PARTY, INTERVENER4);
         caseDetails.getData().put(INTERVENER_BARRISTER_4_COLLECTION, intervener4Barristers);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(CaseAssignedUserRolesResource.builder().build());
 
         List<BarristerData> barristerData = manageBarristerService.getBarristersForParty(caseDetails, AUTH_TOKEN);
@@ -332,14 +330,14 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenUpdateBarristerAccess_thenGrantAccessAndGenerateRepresentationUpdateData() {
+    void givenValidData_whenUpdateBarristerAccess_thenGrantAccessAndGenerateRepresentationUpdateData() {
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildBarristerChange());
         when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, AUTH_TOKEN)).thenReturn(Optional.of(BARRISTER_USER_ID));
         when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_TWO, AUTH_TOKEN)).thenReturn(Optional.of(BARRISTER_USER_ID));
         when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(APP_SOLICITOR);
         when(caseDataService.buildFullApplicantName(any())).thenReturn(CLIENT_NAME);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
@@ -360,7 +358,7 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenValidData_whenUpdateBarristerAccessAsCaseworker_thenGrantAccessAndGenerateRepresentationUpdateData() {
+    void givenValidData_whenUpdateBarristerAccessAsCaseworker_thenGrantAccessAndGenerateRepresentationUpdateData() {
         caseDetails.getData().put(CASE_ROLE, CASEWORKER_ROLE);
         caseDetails.getData().put(MANAGE_BARRISTER_PARTY, APPLICANT);
         when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildBarristerChange());
@@ -369,7 +367,7 @@ public class ManageBarristerServiceTest {
         when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(CASEWORKER_NAME);
         when(caseDataService.buildFullApplicantName(any())).thenReturn(CLIENT_NAME);
         when(systemUserService.getSysUserToken()).thenReturn(SYS_USER_TOKEN);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
@@ -391,29 +389,29 @@ public class ManageBarristerServiceTest {
     }
 
     @Test
-    public void givenNoUserFound_whenUpdateBarristerAccess_thenThrowError() {
+    void givenNoUserFound_whenUpdateBarristerAccess_thenThrowError() {
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildBarristerChange());
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN)).thenReturn(
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN)).thenReturn(
             buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
         when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, AUTH_TOKEN)).thenReturn(Optional.empty());
 
-        Exception exception = assertThrows(NoSuchUserException.class, () ->
+        try {
             manageBarristerService.updateBarristerAccess(caseDetails,
-                List.of(DEFAULT_BARRISTER),
-                Collections.emptyList(), AUTH_TOKEN));
-
-        String expectedMessage = "Could not find the user with email " + APP_BARRISTER_EMAIL_ONE;
-        String actual = exception.getMessage();
-        assertEquals(expectedMessage, actual);
+                    List.of(DEFAULT_BARRISTER),
+                    Collections.emptyList(), AUTH_TOKEN);
+        } catch (NoSuchUserException nue) {
+            String expectedMessage = "Could not find the user with email " + APP_BARRISTER_EMAIL_ONE;
+            assertEquals(expectedMessage, nue.getMessage());
+        }
     }
 
     @Test
-    public void givenValidData_whenNotifyBarristerAccess_sendBarristerNotification() {
+    void givenValidData_whenNotifyBarristerAccess_sendBarristerNotification() {
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         BarristerChange barristerChange = buildBarristerChange();
         when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(barristerChange);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         manageBarristerService.notifyBarristerAccess(caseDetails,
@@ -424,26 +422,26 @@ public class ManageBarristerServiceTest {
         Barrister expectedAdded = barristerChange.getAdded().stream().toList().get(0);
         Barrister expectedRemoved = barristerChange.getRemoved().stream().toList().get(0);
 
-        verify(notificationService).sendBarristerAddedEmail(eq(caseDetails), eq(expectedAdded));
-        verify(notificationService).sendBarristerRemovedEmail(eq(caseDetails), eq(expectedRemoved));
+        verify(notificationService).sendBarristerAddedEmail(caseDetails, expectedAdded);
+        verify(notificationService).sendBarristerRemovedEmail(caseDetails, expectedRemoved);
 
         BarristerLetterTuple addedTuple = BarristerLetterTuple
             .of(DocumentHelper.PaperNotificationRecipient.APPLICANT, AUTH_TOKEN, BarristerChangeType.ADDED);
         BarristerLetterTuple removedTuple = BarristerLetterTuple
             .of(DocumentHelper.PaperNotificationRecipient.APPLICANT, AUTH_TOKEN, BarristerChangeType.REMOVED);
 
-        verify(barristerLetterService).sendBarristerLetter(eq(caseDetails), eq(expectedAdded), eq(addedTuple), eq(AUTH_TOKEN));
-        verify(barristerLetterService).sendBarristerLetter(eq(caseDetails), eq(expectedRemoved), eq(removedTuple), eq(AUTH_TOKEN));
+        verify(barristerLetterService).sendBarristerLetter(caseDetails, expectedAdded, addedTuple, AUTH_TOKEN);
+        verify(barristerLetterService).sendBarristerLetter(caseDetails, expectedRemoved, removedTuple, AUTH_TOKEN);
     }
 
     @Test
-    public void givenValidData_whenUpdateBarristerAccess_thenRemoveAccessAndGenerateRepresentationUpdateData() {
+    void givenValidData_whenUpdateBarristerAccess_thenRemoveAccessAndGenerateRepresentationUpdateData() {
         caseDetails.getData().put(CASE_ROLE, APP_SOLICITOR_POLICY);
         when(barristerUpdateDifferenceCalculator.calculate(any(), any())).thenReturn(buildRemovedBarristerChange());
         when(organisationService.findUserByEmail(APP_BARRISTER_EMAIL_ONE, AUTH_TOKEN)).thenReturn(Optional.of(BARRISTER_USER_ID));
         when(idamService.getIdamFullName(AUTH_TOKEN)).thenReturn(APP_SOLICITOR);
         when(caseDataService.buildFullApplicantName(any())).thenReturn(CLIENT_NAME);
-        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails, AUTH_TOKEN))
+        when(caseAssignedRoleService.getCaseAssignedUserRole(caseDetails.getId().toString(), AUTH_TOKEN))
             .thenReturn(buildCaseAssignedUserRolesResource(APP_SOLICITOR_POLICY));
 
         Map<String, Object> caseData = manageBarristerService.updateBarristerAccess(caseDetails,
